add `cli_parser` for the fundamental types
Signed-off-by: Mattéo Rossillol‑‑Laruelle <beatussum@protonmail.com>

--- a/lib2argp/CMakeLists.txt
+++ b/lib2argp/CMakeLists.txt
@@ -18,9 +18,16 @@ project("lib${CMAKE_PROJECT_NAME}"
         VERSION 0.9.0
         LANGUAGES CXX)
 
-set(LIB2ARGP_HPP)
-set(LIB2ARGP_IPP)
-set(LIB2ARGP_CPP)
+set(LIB2ARGP_HPP
+    include/2argp/cli_parser.hpp
+    include/2argp/exceptions.hpp
+    include/2argp/details/details.hpp
+    include/2argp/details/type_traits.hpp)
+set(LIB2ARGP_IPP
+    include/2argp/details/ipp/cli_parser.ipp
+    include/2argp/details/ipp/details.ipp)
+set(LIB2ARGP_CPP
+    cli_parser.cpp)
 
 add_library("${PROJECT_NAME}" SHARED "${LIB2ARGP_HPP}" "${LIB2ARGP_IPP}" "${LIB2ARGP_CPP}")
 
