add the `cli_parser` specialization for dynamic-sized container
This specialization enables to parse an "array" of value according to a
separator (which can be changed) and each value is then parsed using the
suitable `cli_parser`.
For the moment, `std::array` is not supported.

This commit provides some minor changes like:
	- The `bool` parser can now have only two keywords (one for `true` and
	one other for `false`) in order to avoid some strange parsing
	situations mixing several different keywords (in particular using
	containers).
	- Use forward declarations instead of `#include`s.
	- Add and remove some `TODO` comments.

Signed-off-by: Mattéo Rossillol‑‑Laruelle <beatussum@protonmail.com>

--- a/lib2argp/CMakeLists.txt
+++ b/lib2argp/CMakeLists.txt
@@ -21,6 +21,7 @@ project("lib${CMAKE_PROJECT_NAME}"
 set(LIB2ARGP_HPP
     include/2argp/cli_parser.hpp
     include/2argp/exceptions.hpp
+    include/2argp/type_traits.hpp
     include/2argp/details/details.hpp
     include/2argp/details/type_traits.hpp)
 set(LIB2ARGP_IPP
